@@ -1,11 +1,11 @@
 #!/bin/bash
 
-VER=0.65
+VER=0.75.2
 
 # Author: Wiley Edward Hill
 # Date: 02/23/14
 #
-REV_DATA="08/08/2015"
+REV_DATA="06/12/2020"
 
 me=`basename $0`
 
@@ -142,15 +142,15 @@ fi
 
 do_install_manuals(){
 
-  local src_path="$SHARE_DIR/man/man1"
+  local src_path="$SHARE_DIR/man/man$1"
 
   nfvecho "$me: installing man pages..."
 
-  if [ "$(ls -A $src_path/*.1)" ] ; then
+  if [ "$(ls -A $src_path/*.$1)" ] ; then
 
-    mkdir -p "$LOCAL_SHARE/man/man1"
+    mkdir -p "$LOCAL_SHARE/man/man$1"
 
-    for file in $src_path/*.1; do
+    for file in $src_path/*.$1; do
 
       filename=$(basename ${file})
       target=$LOCAL_SHARE/man/man1/$filename
@@ -159,7 +159,7 @@ do_install_manuals(){
         vecho "linking ${target} to ${file}"
 
         # Example: cp -s /opt/gEDA/share/man/man1/libgeda.1 /usr/local/share/man/man1/
-        cp -s ${file} $LOCAL_SHARE/man/man1/
+        cp -s ${file} $LOCAL_SHARE/man/man$1/
         if [ $? != 0 ]; then
            if ! $UseForce ; then
              return $?;
@@ -170,7 +170,7 @@ do_install_manuals(){
         fi
       elif $UseForce ; then
         vecho "forcing ${target} to ${file}"
-        cp -fs ${file} $LOCAL_SHARE/man/man1/ >/dev/null 2>&1
+        cp -fs ${file} $LOCAL_SHARE/man/man$1/ >/dev/null 2>&1
       else
         if [ -L $target ] ; then
           # TODO make sure the link is ours
@@ -335,7 +335,9 @@ do_install_bin(){
 }
 
 if [ $? = 0 ] || $UseForce ; then
-  do_install_manuals
+  do_install_manuals 1
+  do_install_manuals 3
+  do_install_manuals 5
   do_install_info
   do_install_locales
   do_install_icons
