@@ -1,3 +1,9 @@
+2020-06-12 Wiley E. Hill <wileyhill@gmail.com>
+
+    * scripts/geda-install.sh.in: Revise do_install_manuals to use an argument
+      to specify which man section to install manuals, then call for each
+      applicable sections; 1, 3 and 5.
+
 2019-10-26 Wiley E. Hill <wileyhill@gmail.com>
 
     * po/pt_BR.po: Update Portuguese translations.
